@@ -20,16 +20,16 @@
   </developers>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <scala.version>2.12.20</scala.version>
     <scalatest.version>3.2.18</scalatest.version>
     <scala.compat.version>2.12</scala.compat.version>
     <spec2.version>4.2.0</spec2.version>
-    <spark_mllib.version>3.5.1</spark_mllib.version>
+    <spark_mllib.version>3.5.4</spark_mllib.version>
     <junit.version>4.13.1</junit.version>
-    <spark.version>3.5.1</spark.version>
+    <spark.version>3.5.4</spark.version>
     <slf4j.version>2.0.13</slf4j.version>
     <log4j.version>2.23.1</log4j.version>
     <jackson_core.version>2.17.2</jackson_core.version>
@@ -162,6 +162,7 @@
         <version>2.21.0</version>
         <configuration>
           <!-- Tests will be run with scalatest-maven-plugin instead -->
+          <argLine>--illegal-access=permit</argLine>
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
